# WSR

./: CMakeLists.txt
WSR/: CMakeLists.txt  WSR.cpp  WSR.hpp
WSR/src/: Color.hpp  Point.hpp  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp
WSR/src/Geometry/: Line.cpp  Line.hpp  Shape.hpp
